[package]
build = './common/build/build.rs'
description = 'RLDP library'
edition = '2021'
name = 'rldp'
version = '0.8.26'

[dependencies]
async-trait = '0.1'
enum-as-inner = '=0.5.1'
failure = '0.1'
log = '0.4'
rand = '0.7'
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = 'pre_lightweight' }
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
raptorq = { path = 'raptorq', version = '1.2.1' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = 'pre_lightweight' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = 'pre_lightweight' }

[features]
telemetry = [ 'adnl/telemetry' ]

[lib]
path = 'src/rldplib.rs'

