[package]
authors = [ 'Christopher Berner <christopherberner@gmail.com>' ]
description = 'RaptorQ (RFC6330), forked from https://github.com/cberner/raptorq'
edition = '2018'
name = 'raptorq'
version = '1.2.1'

[dependencies]
serde = { features = [ 'std', 'derive' ], version = '1.0.102' }

[dev-dependencies]
criterion = '0.3'
primal = '0.2'
rand = '0.7'
threadpool = '1.7'

[features]
benchmarking = [  ]

[[bench]]
harness = false
name = 'codec_benchmark'


[[bench]]
harness = false
name = 'matrix_sparsity'


[[bench]]
harness = false
name = 'encode_benchmark'


[[bench]]
harness = false
name = 'decode_benchmark'

